--- a/리액트/package.json
+++ b/리액트/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.45.1",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.40",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.4.7"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.43.1",
