--- a/리액트/package.json
+++ b/리액트/package.json
@@ -14,9 +14,11 @@
     "@tanstack/react-query": "^5.45.1",
     "autoprefixer": "^10.4.19",
     "date-fns": "^3.6.0",
+    "framer-motion": "^11.5.4",
     "postcss": "^8.4.40",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-use": "^17.5.1",
     "tailwindcss": "^3.4.7"
   },
   "devDependencies": {
