--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "deno.enable": true
+  "editor.defaultFormatter": "esbenp.prettier-vscode"
 }
