--- a/리액트/package.json
+++ b/리액트/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@h6s/calendar": "^2.0.1",
     "@tanstack/react-query": "^5.45.1",
+    "@xstate/react": "^4.1.2",
     "autoprefixer": "^10.4.19",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.5.4",
@@ -19,7 +20,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-use": "^17.5.1",
-    "tailwindcss": "^3.4.7"
+    "tailwindcss": "^3.4.7",
+    "xstate": "^5.18.1"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.43.1",
