--- a/리액트/package.json
+++ b/리액트/package.json
@@ -19,6 +19,7 @@
     "postcss": "^8.4.40",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.26.2",
     "react-use": "^17.5.1",
     "tailwindcss": "^3.4.7",
     "xstate": "^5.18.1"
