--- a/.github/workflows/on-issue-opened.yml
+++ b/.github/workflows/on-issue-opened.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const result = await github.rest.pulls.listCommentsForReview({ 
+            const result = await github.rest.pulls.listReviewComments({ 
               owner: context.payload.repository.owner,
               repo: context.payload.repository.name,
               pull_number: context.payload.issue.number,
