--- a/.github/workflows/on-pull-request-review-comment.yml
+++ b/.github/workflows/on-pull-request-review-comment.yml
@@ -1,8 +1,8 @@
 name: on pull request review comment
 
 on:
-  pull_request_review_comment:
-    types: [created]
+  pull_request_review:
+    types: [submitted]
 
 jobs:
   comment:
@@ -17,11 +17,13 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const result = await github.rest.pulls.listReviewComments({ 
+            const reviewComments = await github.rest.pulls.listReviewComments({ 
               owner: context.repo.owner,
               repo: context.repo.repo,
               pull_number: context.issue.number,
             });
+
+            console.log("zz",reviewComments);
 
             const recentComment = result.data?.at(-1).body;
 
