--- a/.github/workflows/on-pull-request-review-comment.yml
+++ b/.github/workflows/on-pull-request-review-comment.yml
@@ -32,7 +32,7 @@ jobs:
             else return false;
 
       - name: make-this-pr-to-draft
-        if: ${{ steps.check-comment.outputs.result == 'true' }}
+        if: ${{ steps.check-comment.outputs.result == 'false' }}
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: gh pr ready --undo ${{ github.event.pull_request.number }}
