--- a/.github/workflows/on-pull-request-review-comment.yml
+++ b/.github/workflows/on-pull-request-review-comment.yml
@@ -37,7 +37,9 @@ jobs:
               const isTruncated = comment.body.length > TRUNCATE_COMMENT_LENGTH;
               const isNotContainNIT = !comment.body.includes('NIT');
 
-              console.log([isNotContainNIT ? "🙇 " : "👍🏻 ", "Review Comment: ", truncatedComment, isTruncated ? '..' : ''].join(''));
+              const msg = [isNotContainNIT ? "🙇 " : "👍🏻 ", "Review Comment: ", truncatedComment, isTruncated ? '..' : ''].join('');
+              const escapedMsg = msg.replaceAll('\n', '\\n');
+              console.log(escapedMsg);
 
               if(isNotContainNIT) haveAllReviewCommentsContainNIT = false;
             }
