--- a/.github/workflows/on-pull-request-review-comment.yml
+++ b/.github/workflows/on-pull-request-review-comment.yml
@@ -38,7 +38,7 @@ jobs:
               const isNotContainNIT = !comment.body.includes('NIT');
 
               const msg = [isNotContainNIT ? "🙇 " : "👍🏻 ", "Review Comment: ", truncatedComment, isTruncated ? '..' : ''].join('');
-              const escapedMsg = msg.replaceAll(/[\r\n]+/g, '_');
+              const escapedMsg = msg.replaceAll(/[\r\n]+/g, '\\n');
               console.log(escapedMsg);
 
               if(isNotContainNIT) haveAllReviewCommentsContainNIT = false;
