--- a/.github/workflows/on-pull-request-review-comment.yml
+++ b/.github/workflows/on-pull-request-review-comment.yml
@@ -19,6 +19,10 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             /** For more details how "context object" looks like, see: https://github.com/actions/toolkit/blob/main/packages/github/src/context.ts */
+
+            console.log("context.payload.comment.id", context.payload.comment.id);
+            console.log("anothers", JSON.stringify(context.payload.comment));
+
             const {data: reviewComments} = await github.rest.pulls.listReviewComments({ 
               owner: context.repo.owner,
               repo: context.repo.repo,
