--- a/.github/workflows/on-pull-request-review-comment.yml
+++ b/.github/workflows/on-pull-request-review-comment.yml
@@ -20,18 +20,14 @@ jobs:
           script: |
             /** For more details how "context object" looks like, see: https://github.com/actions/toolkit/blob/main/packages/github/src/context.ts */
 
-
             const {data: reviewComments} = await github.rest.pulls.listReviewComments({ 
               owner: context.repo.owner,
               repo: context.repo.repo,
               pull_number: context.issue.number,
               }) ?? [];
               
-            console.log("payload", JSON.stringify(context.payload));
-
             /** For more details how "comment object" looks like, see: https://docs.github.com/ko/rest/pulls/comments?apiVersion=2022-11-28#list-review-comments-on-a-pull-request */
-            const recentComment = reviewComments.at(-1);
-            const reviewId = recentComment.pull_request_review_id;
+            const reviewId = context.payload.review.id // reviewCommenes.at(-1).id 에서 뽑아오게 되는 경우, 동시성 문제가 발생할 수 있으므로 context에서 추출하도록 한다.
             const reviewCommentsInThisReview = reviewComments.filter(comment => comment.pull_request_review_id === reviewId);
             const reviewCommentsNotInReply = reviewCommentsInThisReview.filter(comment => comment?.in_reply_to_id == null);
 
