--- a/리액트/package.json
+++ b/리액트/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@h6s/calendar": "^2.0.1",
+    "@react-spring/web": "^9.7.5",
     "@tanstack/react-query": "^5.45.1",
     "@xstate/react": "^4.1.2",
     "autoprefixer": "^10.4.19",
