--- a/리액트/package.json
+++ b/리액트/package.json
@@ -26,7 +26,9 @@
     "xstate": "^5.18.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.50.1",
     "@tanstack/eslint-plugin-query": "^5.43.1",
+    "@types/node": "^22.13.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
