--- a/리액트/package.json
+++ b/리액트/package.json
@@ -18,12 +18,14 @@
     "autoprefixer": "^10.4.19",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.5.4",
+    "immer": "^10.1.1",
     "postcss": "^8.4.40",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.26.2",
     "react-use": "^17.5.1",
     "tailwindcss": "^3.4.7",
+    "use-immer": "^0.11.0",
     "xstate": "^5.18.1"
   },
   "devDependencies": {
