--- a/리액트/package.json
+++ b/리액트/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@h6s/calendar": "^2.0.1",
     "@react-spring/web": "^9.7.5",
-    "@tanstack/react-query": "^5.45.1",
+    "@tanstack/react-query": "5",
     "@xstate/react": "^4.1.2",
     "autoprefixer": "^10.4.19",
     "date-fns": "^3.6.0",
