--- a/리액트/package.json
+++ b/리액트/package.json
@@ -16,12 +16,13 @@
     "@tanstack/react-query": "5",
     "@xstate/react": "^4.1.2",
     "autoprefixer": "^10.4.19",
+    "boring-avatars": "^1.11.2",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.5.4",
     "immer": "^10.1.1",
     "postcss": "^8.4.40",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "18.3.1",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^6.26.2",
     "react-use": "^17.5.1",
