--- a/리액트/package.json
+++ b/리액트/package.json
@@ -11,7 +11,9 @@
     "test:e2e": "playwright test"
   },
   "dependencies": {
+    "@dotlottie/react-player": "^1.6.19",
     "@h6s/calendar": "^2.0.1",
+    "@lottiefiles/dotlottie-react": "^0.13.2",
     "@react-spring/web": "^9.7.5",
     "@tanstack/react-query": "^5.45.1",
     "@xstate/react": "^4.1.2",
@@ -44,7 +46,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "msw": "^2.3.1",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "6"
   },
   "msw": {
     "workerDirectory": [
