--- a/TanstackQuery/package.json
+++ b/TanstackQuery/package.json
@@ -13,7 +13,8 @@
     "@tanstack/react-query": "^4.36.1",
     "axios": "^1.7.9",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.30.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
