--- a/리액트/package.json
+++ b/리액트/package.json
@@ -16,12 +16,14 @@
     "@lottiefiles/dotlottie-react": "^0.13.2",
     "@react-spring/web": "^9.7.5",
     "@tanstack/react-query": "^5.45.1",
+    "@types/lodash-es": "^4.17.12",
     "@xstate/react": "^4.1.2",
     "autoprefixer": "^10.4.19",
     "boring-avatars": "^1.11.2",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.5.4",
     "immer": "^10.1.1",
+    "lodash-es": "^4.17.21",
     "postcss": "^8.4.40",
     "react": "^18.3.1",
     "react-dom": "18.3.1",
