--- a/리액트/package.json
+++ b/리액트/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^11.5.4",
     "immer": "^10.1.1",
+    "jotai": "^2.12.5",
     "lodash-es": "^4.17.21",
     "postcss": "^8.4.40",
     "react": "^18.3.1",
