--- a/리액트/package.json
+++ b/리액트/package.json
@@ -11,6 +11,8 @@
     "test:e2e": "playwright test"
   },
   "dependencies": {
+    "@ai-sdk/azure": "^1.3.24",
+    "@ai-sdk/openai": "^1.3.23",
     "@dotlottie/react-player": "^1.6.19",
     "@h6s/calendar": "^2.0.1",
     "@lottiefiles/dotlottie-react": "^0.13.2",
@@ -18,7 +20,9 @@
     "@tanstack/react-query": "^5.45.1",
     "@types/lodash-es": "^4.17.12",
     "@xstate/react": "^4.1.2",
+    "ai": "^4.3.19",
     "autoprefixer": "^10.4.19",
+    "axios": "^1.11.0",
     "boring-avatars": "^1.11.2",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.5.4",
