--- a/리액트/package.json
+++ b/리액트/package.json
@@ -8,7 +8,13 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test:e2e": "playwright test"
+    "test:e2e": "playwright test",
+    "reg-suit:storycap": "reg-suit storycap",
+    "reg-suit:run": "reg-suit run",
+    "reg-suit:report": "reg-suit report",
+    "reg-suit:pr": "reg-suit pr",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@ai-sdk/azure": "^1.3.24",
@@ -41,6 +47,14 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.50.1",
+    "@storybook/addon-essentials": "^7.6.20",
+    "@storybook/addon-interactions": "^7.6.20",
+    "@storybook/addon-links": "^7.6.20",
+    "@storybook/addon-onboarding": "^1.0.11",
+    "@storybook/blocks": "^7.6.20",
+    "@storybook/react": "^7.6.20",
+    "@storybook/react-vite": "^7.6.20",
+    "@storybook/test": "^7.6.20",
     "@tanstack/eslint-plugin-query": "^5.43.1",
     "@types/node": "^22.13.0",
     "@types/react": "^18.2.66",
@@ -52,13 +66,18 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "msw": "^2.3.1",
+    "playwright": "^1.54.2",
+    "reg-keygen-git-hash-plugin": "^0.14.3",
+    "reg-notify-github-plugin": "^0.14.4",
+    "reg-publish-s3-plugin": "^0.14.4",
+    "reg-suit": "^0.14.4",
+    "storybook": "^7.6.20",
     "typescript": "^5.2.2",
-    "vite": "6"
+    "vite": "5"
   },
   "msw": {
     "workerDirectory": [
       "public"
     ]
-  },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  }
 }
