--- a/리액트/package.json
+++ b/리액트/package.json
@@ -14,7 +14,8 @@
     "reg-suit:report": "reg-suit report",
     "reg-suit:pr": "reg-suit pr",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "storycap": "npx storycap --serverCmd 'npx http-server ./storybook-static -p 9001' http:localhost:9001 --verbose"
   },
   "dependencies": {
     "@ai-sdk/azure": "^1.3.24",
@@ -72,6 +73,7 @@
     "reg-publish-s3-plugin": "^0.14.4",
     "reg-suit": "^0.14.4",
     "storybook": "^7.6.20",
+    "storycap": "^4.3.1",
     "typescript": "^5.2.2",
     "vite": "5"
   },
